better env setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,5 +58,5 @@ services:
     environment:
       - DISPLAY=xvfbsrv:0
       - EXTERNAL_EMULATOR=True
-    command: [ 'python', '-u', 'gym-mupen64plus/example.py' ] # -u for unbuffered output so logs show immediately (in theory)
+    command: [ 'python', '-u', 'gym-mupen64plus/agent.py' ] # -u for unbuffered output so logs show immediately (in theory)
     depends_on: [ xvfbsrv ]
