--- a/gym_mupen64plus/docker-compose.yml
+++ b/gym_mupen64plus/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   xvfbsrv:
     image: ${IMAGE_SPEC}
     ports:
-      - "6000:6000"
+      - "${XVFB_PORT}:6000"
     entrypoint: [
       'Xvfb', ':0',
       '-screen', '0',
@@ -20,7 +20,7 @@ services:
     environment:
       - DISPLAY=xvfbsrv:0
     ports:
-      - "5900:5900"
+      - "${VNC_PORT}:5900"
     entrypoint: [ 'x11vnc', '-forever', '-viewonly', '-shared', '-nopw', '-noshm' ]
     depends_on: [ xvfbsrv ]
 
@@ -34,7 +34,7 @@ services:
         source: "${LOCAL_ROM_PATH}" # Since ROMs are not included in the image, bind mount a local path (set this value in the .env file)
         target: /src/gym-mupen64plus/gym_mupen64plus/ROMs
     ports:
-      - "8082:8082"
+      - "${INPUT_PORT}:8082"
     command: [
       'mupen64plus',
       '--nospeedlimit',
