--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,16 @@ services:
       '-ac', # Disable access control - enables access by any host (https://www.x.org/archive/X11R6.8.1/doc/Xserver.1.html)
       '-listen', 'tcp' # Allow remote connections over TCP
     ]
+    stdin_open: true
+    tty: true
 
-
+  screensrv:
+    image: ${IMAGE_SPEC}
+    ports:
+      - "8070:8070"
+    command: ['python3', 'server.py']
+    stdin_open: true
+    tty: true
   vncsrv:
     image: ${IMAGE_SPEC}
     environment:
@@ -23,6 +31,8 @@ services:
       - "${VNC_PORT}:5900"
     entrypoint: [ 'x11vnc', '-forever', '-viewonly', '-shared', '-nopw', '-noshm' ]
     depends_on: [ xvfbsrv ]
+    stdin_open: true
+    tty: true
 
 
   emulator:
@@ -49,3 +59,6 @@ services:
       '/src/gym-mupen64plus/gym_mupen64plus/ROMs/marioKart.n64'
     ]
     depends_on: [ xvfbsrv ]
+    stdin_open: true
+    tty: true
+  
