--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,23 +16,23 @@ services:
     stdin_open: true
     tty: true
 
-  screensrv:
-    image: ${IMAGE_SPEC}
-    ports:
-      - "8070:8070"
-    command: ['python3', 'server.py']
-    stdin_open: true
-    tty: true
-  vncsrv:
-    image: ${IMAGE_SPEC}
-    environment:
-      - DISPLAY=xvfbsrv:0
-    ports:
-      - "${VNC_PORT}:5900"
-    entrypoint: [ 'x11vnc', '-forever', '-viewonly', '-shared', '-nopw', '-noshm' ]
-    depends_on: [ xvfbsrv ]
-    stdin_open: true
-    tty: true
+  # screensrv:
+  #   image: ${IMAGE_SPEC}
+  #   ports:
+  #     - "8070:8070"
+  #   command: ['python3', 'server.py']
+  #   stdin_open: true
+  #   tty: true
+  # vncsrv:
+  #   image: ${IMAGE_SPEC}
+  #   environment:
+  #     - DISPLAY=xvfbsrv:0
+  #   ports:
+  #     - "${VNC_PORT}:5900"
+  #   entrypoint: [ 'x11vnc', '-forever', '-viewonly', '-shared', '-nopw', '-noshm' ]
+  #   depends_on: [ xvfbsrv ]
+  #   stdin_open: true
+  #   tty: true
 
 
   emulator:
