--- a/gym_mupen64plus/envs/config.yml
+++ b/gym_mupen64plus/envs/config.yml
@@ -23,8 +23,11 @@ VGLRUN_CMD: vglrun
 # The command to invoke the mupen64plus emulator process:
 MUPEN_CMD: mupen64plus
 
+IMAGE_SPEC: mupen64_gym:one
+
 # The name/path of the video/graphics driver/plugin:
-GFX_PLUGIN: mupen64plus-video-rice.so
+GFX_PLUGIN: mupen64plus-video-glide64mk2.so
+# GFX_PLUGIN: mupen64plus-video-rice.so
 
 # The path to the mupen64plus input driver:
 INPUT_DRIVER_PATH: /usr/local/lib/mupen64plus/mupen64plus-input-bot.so
