--- a/gym_mupen64plus/envs/config.yml
+++ b/gym_mupen64plus/envs/config.yml
@@ -15,7 +15,7 @@ OFFSET_X: 400
 OFFSET_Y: 240
 
 # XVFB config:
-USE_XVFB: false
+USE_XVFB: true
 # USE_XVFB: true
 XVFB_CMD: Xvfb
 TMP_DIR: /dev/shm
